--- a/Alumno/asignacionesRecursos.html
+++ b/Alumno/asignacionesRecursos.html
@@ -26,7 +26,7 @@
 		<div class="nav-wrap">
 			<nav>
 				<span class="toggle-menu">Menú</span>
-				<a href="perfilDocente.html" class="search-form" id="nombreUsuario">
+				<a href="perfilAlumno.html" class="search-form" id="nombreUsuario">
 					
 				</a>
 				<ul>
@@ -69,8 +69,8 @@
 				<div class="entry-content estilo-entry-content">
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="#">Mi Perfil</a></li>
-						<li><a href="#">Editar</a></li>
+						<li><a href="perfilAlumno.html">Mi Perfil</a></li>
+						<li><a href="perfilAlumnoEditar.html?valid=y">Editar</a></li>
 						<li><a href="#">Mis Notificaciones</a></li>
 					</ul>
 				</div>
