--- a/Administracion/perfilAdministracionEditar.html
+++ b/Administracion/perfilAdministracionEditar.html
@@ -51,11 +51,13 @@
 				<div class="entry-content estilo-entry-content" >
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="inscripcion.html">Inscripción</a></li>
-						<li><a href="reinscripcion.html">Reiscripcion</a></li>
-						<li><a href="mensajeriaAdministracion.html">Mensajeria</a></li>
-						<li><a href="#">Usuarios</a></li>
-						<li><a href="gestion.html">Procesos De Gestión</a></li>
+						<li><a href="RegistroSolicitudes.html">Registro De Solicitudes</a></li>
+						<li><a href="boletinEscolar.html">Boletin Escolar</a></li>
+						<li><a href="mensajeriaAlumno.html">Mensajeria</a></li>
+						<li><a href="planEstudio.html">Consultar Plan De Estudio</a></li>
+						<li><a href="horarioCalendarioEscolar.html">Horario y Calendario Escolar</a></li>
+						<li><a href="foros.html">Foros</a></li>
+						<li><a href="asignacionesRecursos.html">Asignaciones y Recursos Educativos</a></li>
 						
 					</ul>
 				</div>
@@ -212,10 +214,6 @@
 						<tr>
 							<td class="right espacioRi">Lugar Nacimiento: </td>
 							<td class="left espacioLe"><input type="text" class="nEdit2" id="lugar1"></td>
-						</tr>
-						<tr>
-							<td class="right espacioRi">Contraseña: </td>
-							<td class="left espacioLe"><a href="#">Cambiar Contraseña</a> </td>
 						</tr>
 					</tbody>
 				</table>
