--- a/Alumno/consultarPlanEstudioSemanal.html
+++ b/Alumno/consultarPlanEstudioSemanal.html
@@ -72,8 +72,8 @@
 				<div class="entry-content estilo-entry-content">
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
-						<li><a href="#">Mi Perfil</a></li>
-						<li><a href="#">Editar</a></li>
+						<li><a href="perfilAlumno.html">Mi Perfil</a></li>
+						<li><a href="perfilAlumnoEditar.html?valid=y">Editar</a></li>
 						<li><a href="#">Mis Notificaciones</a></li>
 					</ul>
 				</div>
