--- a/Alumno/RegistroSolicitudes.html
+++ b/Alumno/RegistroSolicitudes.html
@@ -31,7 +31,7 @@
 					
 				</a>
 				<ul>
-					<li><a href="intranetDocente.html">Inicio</a></li>
+					<li><a href="intranetAlumno.html">Inicio</a></li>
 					<li><a href="../admision.html" class="a-admision">Admisión</a></li>
 					<li><a href="../contacto.html">Contacto</a></li>
 					<li><a href="../institucion.html">La Institución</a></li>
@@ -53,13 +53,12 @@
 					<p><img src="../images/post1.jpg" alt="Chicos jugando futbol"></p>
 					<ul class="navegacion">
 						<li><a href="RegistroSolicitudes.html">Registro De Solicitudes</a></li>
-						<li><a href="envioComunicados.html">Envio De Comunicados</a></li>
-						<li><a href="mensajeriaDocente.html">Mensajeria</a></li>
-						<li><a href="CargaConsultaPlanEstudio.html">Plan De Estudios</a></li>
-						<li><a href="cargaCalificaciones.html">Carga De Calificaciones</a></li>
-						<li><a href="HorarioCalendarioEscolar.html">Horario y Calendario Escolar</a></li>
+						<li><a href="boletinEscolar.html">Boletin Escolar</a></li>
+						<li><a href="mensajeriaAlumno.html">Mensajeria</a></li>
+						<li><a href="planEstudio.html">Consultar Plan De Estudio</a></li>
+						<li><a href="horarioCalendarioEscolar.html">Horario y Calendario Escolar</a></li>
 						<li><a href="foros.html">Foros</a></li>
-						<li><a href="CargaDescargaRecursos.html">Asignaciones y Recursos Educativos</a></li>
+						<li><a href="asignacionesRecursos.html">Asignaciones y Recursos Educativos</a></li>
 					</ul>
 				</div>
 			</article>
