--- a/Administracion/inscripcionReins.html
+++ b/Administracion/inscripcionReins.html
@@ -371,7 +371,7 @@
 					<br>
 					<section id="some"></section>
 					<section id="some2">
-						<a id="restAtras" class="btn btn-success"> Inscribir a un Nuevo Alumno </a>
+						<a id="restAtras2" class="btn btn-success"> Volver a la reinscripcion </a>
 					</section>
 
 </div>
