--- a/Administracion/reinscripcion.html
+++ b/Administracion/reinscripcion.html
@@ -145,12 +145,13 @@
 				<hr />
 			</article>
 			<article id="noticias">
-				<header class="titulo"><h3>Seleccionar Una Opción</h3></header>
+				<header class="titulo"><h3>Ingresar Cedula</h3></header>
 				<div id="contenidoNoticias">
-					<ul id="listaGestion">
+					<!--ul id="listaGestion">
 						<li><a id="iconoconsultar" class="consultarCed"></a><a class="textoAbajo consultarCed">Consultar</a></li>
-						<!--li><a id="iconomodificar"class="modificarCed"></a><a class="textoAbajo modificarCed">Modificar</a></li-->
-					</ul>
+						<li><a id="iconomodificar"class="modificarCed"></a><a class="textoAbajo modificarCed">Modificar</a></li>
+					</ul-->
+					<br><br>
 					<div id="numerocedula" class="mostrarCed">
 						<form action="" method="get" accept-charset="utf-8">
 							<label id="labelcedula">Numero De Cedula: </label>
@@ -158,14 +159,19 @@
 							<span id="ced"></span>
 						</form>
 						<br>
+						<input type="button" name="" value="Reinscribir" id="reins">
+						<br><br>
+						<div id="msj">
+							
+						</div>
 						<div id="sig">
 							<a id="siguiente"></a>
 							<a id="sit" >Siguiente</a>
 						</div>
-						<div id="atr">
+						<!--div id="atr">
 							<a id="atras" ></a>
 							<a id="at" >Atrás</a>
-						</div>
+						</div-->
 						
 					</div>
 				</div>				
