--- a/Representantes/IntranetRepresentante.html
+++ b/Representantes/IntranetRepresentante.html
@@ -14,7 +14,9 @@
 	<script src="../js/script.min.js"></script>
 	<script src="../js/swipe.min.js"></script>
 	<script src="../js/jquery.cookie.js"></script>
+	<script src="../js/representante.js"></script>
 	<script src="../js/mostrarNoticias.js"></script>
+	
 </head>
 <body class="p-admision">
 	<!-- HEADERRRRRRRRRRRR -->
