Modificaciones Carga Notas

--- a/Docente/cargaCalificaciones.html
+++ b/Docente/cargaCalificaciones.html
@@ -191,7 +191,7 @@
 							<tr>
 								<td class="right espacioRi"><label>Materia:</label></td>
 								<td class="left espacioLe">
-								<select id="selectMateriaIngresarPA">
+								<select id="selectMateriaIngresarPA" class="materias">
 									<option value="0">Materia</option>
 								</select></td>
 							</tr>
@@ -227,7 +227,14 @@
 				</div>
 
 				<div class=" centrar divIngresarPA2 none">
-					
+					<br>
+					<div class="left">
+						<label><b>Materia:</b> <span id="materiaPA2"></span></label>
+						<div>
+							<label><b>Grado:</b> <span id="gradoPA2"></span></label>
+						</div>
+					</div>
+					<br>
 					<table>
 						<thead>
 							<tr>
@@ -241,8 +248,8 @@
 							<tr>
 								<td><span id="spanCedula">21029953</span></td>
 								<td><input type="text" id="descrip"></td>
-								<td><input type="text" id="nota"></td>
-								<td><input type="text" id="porc"></td>
+								<td><input type="number" id="nota"></td>
+								<td><input type="number" id="porc"><span class="bold">%</span></td>
 							</tr>
 						</tbody>
 					</table>
@@ -290,7 +297,7 @@
 							<tr>
 								<td class="right espacioRi"><label>Materia:</label></td>
 								<td class="left espacioLe">
-								<select id="selectMateriaIngresarPG">
+								<select id="selectMateriaIngresarPG" class="materias">
 									<option value="0">Materia</option>
 								</select></td>
 							</tr>
@@ -392,7 +399,7 @@
 							<tr>
 								<td class="right espacioRi"><label>Materia:</label></td>
 								<td class="left espacioLe">
-								<select id="selectMateriaConsultarPA">
+								<select id="selectMateriaConsultarPA" class="materias">
 									<option value="0">Materia</option>
 								</select></td>
 							</tr>
@@ -489,7 +496,7 @@
 							<tr>
 								<td class="right espacioRi"><label>Materia:</label></td>
 								<td class="left espacioLe">
-								<select id="selectMateriaConsultarPG">
+								<select id="selectMateriaConsultarPG" class="materias">
 									<option value="0">Materia</option>
 								</select></td>
 							</tr>
@@ -587,7 +594,7 @@
 							<tr>
 								<td class="right espacioRi"><label>Materia:</label></td>
 								<td class="left espacioLe">
-								<select id="selectMateriaModificarPA">
+								<select id="selectMateriaModificarPA" class="materias">
 									<option value="0">Materia</option>
 								</select></td>
 							</tr>
@@ -686,7 +693,7 @@
 							<tr>
 								<td class="right espacioRi"><label>Materia:</label></td>
 								<td class="left espacioLe">
-								<select id="selectMateriaModificarPG">
+								<select id="selectMateriaModificarPG" class="materias">
 									<option value="0">Materia</option>
 								</select></td>
 							</tr>
