--- a/Representantes/horarioCalendarioEscolar.html
+++ b/Representantes/horarioCalendarioEscolar.html
@@ -158,7 +158,7 @@
 							<label>Seleccione</label>
 							<br><br>
 							<select  id="listAlum">
-							<option value="0">----------------------</option>}
+							<option value="0">----------------------</option>
 								
 							</select>
 							<br><br>
