--- a/Alumno/foroResponder.html
+++ b/Alumno/foroResponder.html
@@ -24,21 +24,20 @@
 	<!-- HEADERRRRRRRRRR -->
 	<header class="site-header">
 		<div class="header-image-container estilo-header">
-			<a href="../index.html" class="header_image"><img src="../images/v90_header.jpg" alt="Venezuela 90"></a>
+			<a href="IntranetAlumno.html" class="header_image"><img src="../images/v90_header.jpg" alt="Venezuela 90"></a>
 		</div>
 		<div class="nav-wrap">
 			<nav>
 				<span class="toggle-menu">Menú</span>
-				<a href="perfilAdministracion.html" class="search-form" id="nombreUsuario">
+				<a href="perfilAlumno.html" class="search-form" id="nombreUsuario">
 					
 				</a>
 				<ul>
 					<li><a href="IntranetAlumno.html">Inicio</a></li>
-					<li><a href="../admision.html" class="a-admision">Admisión</a></li>
-					<li><a href="../contacto.html">Contacto</a></li>
-					<li><a href="../institucion.html">La Institución</a></li>
-					<li><a href="../propuesta.html">Propuesta Educativa</a></li>
-				</ul>
+					<li><a href="alumnoAdmision.html" class="a-admision">Admisión</a></li>
+					<li><a href="alumnoContacto.html">Contacto</a></li>
+					<li><a href="alumnoInstitucion.html">La Institución</a></li>
+					<li><a href="alumnoPropuesta.html">Propuesta Educativa</a></li>
 			</nav>
 		</div>
 	</header>
