--- a/Alumno/planEstudio.html
+++ b/Alumno/planEstudio.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Venezuela 90 | Intranet</title>
+	<title>Venezuela 90 | Plan de Estudio</title>
 	<link rel="stylesheet" href="../css/genericons.css">
 	<link rel="stylesheet" href="../css/normalize.css">
 	<link rel="stylesheet" href="../css/style.css">
@@ -21,20 +21,20 @@
 	<!-- HEADERRRRRRRRRRRR -->
 	<header class="site-header">
 		<div class="header-image-container estilo-header">
-			<a href="../index.html" class="header_image"><img src="../images/v90_header.jpg" alt="Venezuela 90"></a>
+			<a href="IntranetAlumno.html" class="header_image"><img src="../images/v90_header.jpg" alt="Venezuela 90"></a>
 		</div>
 		<div class="nav-wrap">
 			<nav>
 				<span class="toggle-menu">Menú</span>
-				<a href="perfilDocente.html" class="search-form" id="nombreUsuario">
+				<a href="perfilAlumno.html" class="search-form" id="nombreUsuario">
 					
 				</a>
 				<ul>
 					<li><a href="IntranetAlumno.html">Inicio</a></li>
-					<li><a href="../admision.html" class="a-admision">Admisión</a></li>
-					<li><a href="../contacto.html">Contacto</a></li>
-					<li><a href="../institucion.html">La Institución</a></li>
-					<li><a href="../propuesta.html">Propuesta Educativa</a></li>
+					<li><a href="alumnoAdmision.html" class="a-admision">Admisión</a></li>
+					<li><a href="alumnoContacto.html">Contacto</a></li>
+					<li><a href="alumnoInstitucion.html">La Institución</a></li>
+					<li><a href="alumnoPropuesta.html">Propuesta Educativa</a></li>
 				</ul>
 			</nav>
 		</div>
