--- a/Administracion/viewForos.html
+++ b/Administracion/viewForos.html
@@ -21,7 +21,7 @@
 	<!-- HEADERRRRRRRRRR -->
 	<header class="site-header">
 		<div class="header-image-container estilo-header">
-			<a href="../index.html" class="header_image"><img src="../images/v90_header.jpg" alt="Venezuela 90"></a>
+			<a href="intranetAdministracionhtml" class="header_image"><img src="../images/v90_header.jpg" alt="Venezuela 90"></a>
 		</div>
 		<div class="nav-wrap">
 			<nav>
@@ -30,11 +30,11 @@
 					
 				</a>
 				<ul>
-					<li><a href="../index.html">Inicio</a></li>
-					<li><a href="../admision.html" class="a-admision">Admisión</a></li>
-					<li><a href="../contacto.html">Contacto</a></li>
-					<li><a href="../institucion.html">La Institución</a></li>
-					<li><a href="../propuesta.html">Propuesta Educativa</a></li>
+					<li><a href="intranetAdministracion.html">Inicio</a></li>
+					<li><a href="adminAdmision.html" class="a-admision">Admisión</a></li>
+					<li><a href="adminContacto.html">Contacto</a></li>
+					<li><a href="adminInstitucion.html">La Institución</a></li>
+					<li><a href="adminPpropuesta.html">Propuesta Educativa</a></li>
 				</ul>
 			</nav>
 		</div>
